Collapsable arrow fix

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -5,7 +5,7 @@
 
 // 2. Set your own initial variables
 $spark-green: #1abc9c;
-$spark-grey: #ddd;
+$spark-grey: #dddddd;
 
 // 3. Set the derived variables
 $link: $spark-green;
@@ -64,7 +64,7 @@ details.collapsable {
     position: relative;
     min-height: 4em;
     line-height: 2em;
-    padding: 1em 1em 0 1em;
+    padding: 20px;
 
   
     // hide stock open marker
@@ -76,8 +76,8 @@ details.collapsable {
     &::after {
       content: "▷";
       position: absolute;
-      right: 1em;
-      top: 0.9em;
+      right: 5px;
+      top: calc(50% - 1.2em);
       transition-duration: 0.3s;
       font-size: 1.2em;
     }
